# buildm-on

./: CMakeLists.txt  README.md  dashboard_mockup.txt  featurePlan.md  install.ps1
src/: error_parser.hpp  github_actions.hpp  main.cpp  os_utils.hpp  plugin_manager.hpp  ws_server.hpp
src/ui/: buildcard.hpp  dashboard.hpp  errorpanel.hpp  launcher.hpp  statusbar.hpp  theme.hpp  widgets.hpp
